@@ -17,6 +17,7 @@
 - :meth:`atomx.Atomx.get` also accepts a model class or instance as resource argument.
   E.g.: ``atomx_api.get(atomx.models.Advertiser)`` or ``atomx_api.get(atomx.models.Advertiser(42))``
 - Add :mod:`pickle` support for :mod:`atomx.models`.
+- Save HTTP headers in :attr:`atomx.Atomx.last_response`.
 
 
 1.4
